# customer-segmentation-ecommerce

./: .gitignore  README.md  pyproject.toml
models/: kmeans_model_k3.joblib  kmeans_model_k6.joblib  scaler_features.joblib
notebooks/: analyse_exploratoire.ipynb  contrat_maintenance.ipynb  requetes_fernanda.ipynb  tests_clusterings.ipynb
