[project]
name = "projet-5"
version = "0.1.0"
description = ""
authors = [
    {name = "AurelienGruzon", email = "aureliengruzon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false   # <-- ici, et seulement ici

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

